<resources>
    <string name="app_name">Sanus</string>
    <string name="action_settings">Settings</string>
    <string name="Registrar">Registrar</string>
    <string name="AppNombre">Sanus</string>
    <string name="Altura">Altura (Metros)</string>
    <string name="Genero">Genero </string>
    <string name="Contra">Contraseña </string>
    <string name="Nombre">Nombre</string>
    <string name="Ejercicio">Días de ejercicio a la semana</string>
    <string name="Peso">Peso (Kilogramos)</string>
    <string name="Nacimiento">Fecha de nacimiento</string>
    <string name="suIMC">Su IMC es: </string>
    <string name="indicadoresIMC"><![CDATA[Indice de Masa Corporal(IMC):\n Bajo peso (IMC <18,5) \n Rango normal (IMC = 18,5-24,99)\n Sobrepeso (IMC = 25-29,99)\n Obesidad (IMC ≥30) ]]></string>
    <string name="pesoIdeal">Su peso ideal es: </string>
    <string name="suTMB">La cantidad de calorias que deberias consumir diario son: </string>
    <string-array name="cantidad">
        <item> </item>
        <item>Poco o ningún</item>
        <item>Ligero (1-3)</item>
        <item>Moderado (3-5)</item>
        <item>Fuerte (6-7)</item>
        <item>Muy fuerte (dos veces al día)</item>
    </string-array>
    <string-array name="sexo">
        <item> </item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="Perfil">Perfil</string>
    <string name="drawer_open">Navigation Abierta</string>
    <string name="drawer_close">Navigation Cerrada</string>
    <string name="Menu">Menu</string>
    <string name="cantidad">Cantidad en gramos</string>
    <string name="editar">Editar</string>
    <string name="ingresar">Ingresar</string>
    <string name="Ayuda">Ayuda</string>

</resources>
