<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".inicio">

        <TextView
            style="@style/Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/AppNombre"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="50sp"
            android:textAlignment="inherit"
            android:layout_column="0" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nombre"
                android:id="@+id/textView2"
                android:layout_column="0"
                android:textSize="15sp" />
        </TableRow>

        <EditText
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nombre"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Contra"
                android:id="@+id/textView8"
                android:layout_column="0"
                android:textSize="15sp" />
        </TableRow>

        <EditText
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_column="0" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Genero"
                android:id="@+id/textView7"
                android:layout_column="0"
                android:textSize="15sp" />
        </TableRow>

        <Spinner
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/genero"
            android:layout_column="0" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ejercicio"
                android:id="@+id/textView3"
                android:layout_column="0"
                android:textSize="15sp" />
        </TableRow>

        <Spinner
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ejecicio" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Altura"
                android:id="@+id/textView4"
                android:layout_column="0"
                android:textSize="15sp" />
        </TableRow>

        <EditText
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/altura"
            android:layout_above="@+id/nacimiento"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Peso"
                android:id="@+id/textView6"
                android:layout_column="0"
                android:textSize="15sp" />
        </TableRow>

        <EditText
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_above="@+id/nacimiento"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_column="0" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/Message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Nacimiento"
                android:id="@+id/textView5"
                android:layout_column="0"
                android:textSize="15sp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <DatePicker
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/datePicker"
                android:layout_column="0"
                android:layout_gravity="top|right" />
        </TableRow>

        <Button
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrar"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_column="0"
            android:background="@color/abc_search_url_text_normal" />

    </TableLayout>
</ScrollView>
