<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/inicio"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bienvenido"
            style="@style/Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@mipmap/ic_launcher"
            android:text="Bienvenido: Nombre"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/textIMC"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indicadoresIMC"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textPesoIdeal"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesoIdeal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textTMB"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suTMB"
            android:textSize="20sp" />

        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@mipmap/ic_launcher"
            android:text="Ir a Menu" />

    </LinearLayout>
</ScrollView>