<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background"
            android:weightSum="1">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            >
        </include>

            <TextView
            android:id="@+id/hola"
            style="@style/Message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/blue"
            android:text="Hola  "
            android:textSize="40sp" />

            <Space
                
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView

            android:id="@+id/textIMC"
                android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suIMC"
            android:textSize="20sp" />

            <Button
                android:id="@+id/ayuda"
                android:layout_width="41dp"
                android:layout_height="44dp"
                android:background="@color/material_deep_teal_500"
                android:drawableTop="@mipmap/ic_ayuda"
                android:text="@string/Ayuda"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/perfilt"
                android:layout_toStartOf="@+id/perfilt"
                android:layout_gravity="right" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.11" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
            android:id="@+id/textPesoIdeal"
                android:textColor="@color/black"
                android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pesoIdeal"
            android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.12" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
            android:id="@+id/textTMB"
                android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/suTMB"
            android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
            style="@style/button_text"
            android:background="@drawable/button"
            android:id="@+id/editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Editar" />


        </LinearLayout>
</android.support.v4.widget.DrawerLayout>